fix(mobile) Expanded slider has wrong color in warning scope (TSAM-11397)
Issue: OAPWAF-1811

--- a/tau/src/css/profile/mobile/changeable/common/slider.less
+++ b/tau/src/css/profile/mobile/changeable/common/slider.less
@@ -47,7 +47,7 @@
 			background-color: @color_slider_warning_active_bg;
 
 			&.ui-slider-handler-active.ui-slider-handler-expand {
-				background-color: @color_slider_handle_bg;
+				background-color: @color_slider_warning_active_bg;
 			}
 		}
 	}
